--- a/financial.html
+++ b/financial.html
@@ -14,7 +14,7 @@
 	<div id="my_dataviz"></div>
 
 	<div id="navigation"> 
-		<a href="stock chart.html" class="previous round">&#8249;</a>
+		<a href="index.html" class="previous round">&#8249;</a>
 		<a href="topholders.html" class="next round">&#8250;</a>
 	</div>
 
