--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ background-color: yellow;
 	//append the svg object to the body of the page
 
 	var parseDate = d3.time.format("%Y-%m-%d").parse;
+	var formatValue = d3.format(".3s");
 
 	// for tooltip
 	var bisectDate = d3.bisector(function(d) { return d.date; }).left
@@ -122,7 +123,7 @@ background-color: yellow;
 
 	var xAxis   = d3.svg.axis().scale(x).orient('bottom'),
 	    xAxis2  = d3.svg.axis().scale(x2).orient('bottom'),
-	    yAxis   = d3.svg.axis().scale(y).orient('left');
+	    yAxis   = d3.svg.axis().scale(y).orient('left').tickFormat(function(d){return '$'+formatValue(d)});
 
 	// var priceLine = d3.svg.line()
 	//     .x(function(d) { return x(d.date)})
@@ -190,30 +191,30 @@ background-color: yellow;
 	        .datum(data)
 	        .attr("fill", "none")
             .attr('class', 'chart_focus_area')
-            .attr('transform', 'translate(12, 0)')
+            .attr('transform', 'translate(22, 0)')
 		    //.attr("stroke-width", 1)
 	        .attr("d", area);	        
 
   		//Add xAxis
   		focus.append('g')
   			.attr('class', 'x axis')
-  			.attr("transform",  "translate(12," + height + ")")
+  			.attr("transform",  "translate(22," + height + ")")
       		.call(xAxis);
       	//Add yAxis
     	focus.append('g')
 	        .attr('class', 'y axis')	        
-	        .attr('transform', 'translate(12, 0)')
+	        .attr('transform', 'translate(22, 0)')
 	        .call(yAxis);
 
 
 
 	    var priceTooltip = focus.append('g')
 	        .attr('class', 'tooltip_area')
-	        .attr('transform', 'translate(12, 0)')
+	        .attr('transform', 'translate(22, 0)')
 	        .style('display', 'none')
 
 	    priceTooltip.append("circle")
-	    	.attr('transform', 'translate(12, 0)')
+	    	.attr('transform', 'translate(22, 0)')
             .attr("r", 5);
 
 	    priceTooltip.append("rect")
@@ -259,7 +260,7 @@ background-color: yellow;
                 d = x0 - d0.date > d1.date - x0 ? d1 : d0;
             priceTooltip.attr("transform", "translate(" + x(d.date)+20 + "," + y(d.price) + ")");
             priceTooltip.select(".tooltip-date").text(dateFormatter (d.date));
-            priceTooltip.select(".tooltip-price").text(d.price);
+            priceTooltip.select(".tooltip-price").text('$'+formatValue(d.price));
         }
 
 	    //put range tags
